# BitmapPlusPlus

./: CMakeLists.txt
examples/: bernoulli_dist.cpp  chess_board.cpp  draw_primitives.cpp  polymorphic_shapes.cpp  read_bitmap.cpp  rotation.cpp  variant_shapes.cpp  write_bitmap.cpp
examples/fractals/: julia.cpp  mandelbrot.cpp
lib/include/: BitmapPlusPlus.hpp
src/: BitmapPlusPlus.cpp  CMakeLists.txt
src/include/: BitmapPlusPlus.hpp
